# python-template

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  run_local_checks.sh
.github/workflows/: tests.yml
src/package_name/: __init__.py  settings.py
tests/: conftest.py
tests/unit/: test_package.py
